# github-statcrab

./: .env.example  .gitignore  Cargo.toml  Dockerfile.release  LICENSE  Makefile  README.md  build.rs  test_api_functionality.sh
.github/workflows/: cd.yml  ci.yml  update-supported-langs.yml
assets/: icon.pxd  social-preview.pxd
assets/configs/: language-colors.json
assets/css/: card.css  error-card.css
assets/css/themes/: README.md  dark.css  dracula.css  light.css  monokai.css  transparent-blue.css
card_theme_macros/: Cargo.toml  README.md
card_theme_macros/src/: lib.rs
src/: github_stats.rs  lib.rs  main.rs
src/cards/: card.rs  error_card.rs  helpers.rs  langs_card.rs  mod.rs  stats_card.rs
src/github/: README.md  api.rs  cache.rs  mod.rs  types.rs
src/web/: mod.rs  routes.rs
tests/: github_api_integration.rs  web_routes_integration.rs
tests/common/: mod.rs
