[package]
name = "github-statcrab"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/samgozman/github-statcrab"
repository = "https://github.com/samgozman/github-statcrab"
authors = ["Sam Gozman <sam@gozman.space>"]
description = "GitHub profile stats for readme generated on the fly"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
card_theme_macros = { path = "./card_theme_macros" }

[dev-dependencies]
quick-xml = "0.38.1"
http-body-util = "0.1.3"
tower = "0.5.1"
