[package]
name = "github-statcrab"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/samgozman/github-statcrab"
repository = "https://github.com/samgozman/github-statcrab"
authors = ["Sam Gozman <sam@gozman.space>"]
description = "GitHub profile stats for readme generated on the fly"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
card_theme_macros = { path = "./card_theme_macros" }
reqwest = { version = "0.12.22", default-features = false, features = [
  "blocking",
  "rustls-tls",
], optional = true }
serde_yaml = { version = "0.9.34-deprecated", optional = true }

[dev-dependencies]
quick-xml = "0.38.1"
http-body-util = "0.1.3"
tower = "0.5.1"

[workspace]
members = ["card_theme_macros"]

[[bin]]
name = "server"
path = "src/main.rs"

# `generate_language_colors` hidden by feature flag to avoid unnecessary dependencies in the main binary.
[[bin]]
name = "generate_language_colors"
path = "src/bin/generate_language_colors.rs"
required-features = ["gen-language-colors"]

[features]
default = []
gen-language-colors = ["dep:reqwest", "dep:serde_yaml"]

# ---------------------------------------------------------------------------
# Tooling metadata (not used by Cargo directly). This documents external dev
# tools expected by contributors. Binary tools should be installed with
# `cargo install --locked <crate>` and are intentionally not regular
# dependencies to avoid bloating build graphs.
# ---------------------------------------------------------------------------
[package.metadata.dev-tools]
watchexec = { crate = "watchexec-cli", install = "cargo install --locked watchexec-cli", usage = "make run-watch" }
