[package]
name = "github-statcrab"
version = "0.1.9"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/samgozman/github-statcrab"
repository = "https://github.com/samgozman/github-statcrab"
authors = ["Sam Gozman <sam@gozman.space>"]
description = "GitHub profile stats for readme generated on the fly"
rust-version = "1.89.0"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
card_theme_macros = { path = "./card_theme_macros" }
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
graphql_client = "0.14.0"
thiserror = "2.0.17"
dotenvy = "0.15.7"
serde_yaml = { version = "0.9.34-deprecated", optional = true }
sentry = { version = "0.45.0", features = [
  "tower-axum-matched-path",
  "tracing",
  "tower",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.1"
moka = { version = "0.12.11", features = ["future"] }
tempfile = { version = "3.23.0", optional = true }

[dev-dependencies]
quick-xml = "0.38.4"
http-body-util = "0.1.3"
dotenvy = "0.15.7"

[workspace]
members = ["card_theme_macros"]

[[bin]]
name = "server"
path = "src/main.rs"

# `generate_language_colors` hidden by feature flag to avoid unnecessary dependencies in the main binary.
[[bin]]
name = "generate_language_colors"
path = "src/bin/generate_language_colors.rs"
required-features = ["gen-language-colors"]

# `generate_themes_readme` hidden by feature flag to avoid unnecessary dependencies in the main binary.
[[bin]]
name = "generate_themes_readme"
path = "src/bin/generate_themes_readme.rs"
required-features = ["gen-themes-readme"]

[features]
default = []
gen-language-colors = ["reqwest/blocking", "dep:serde_yaml"]
gen-themes-readme = ["dep:tempfile"]

# ---------------------------------------------------------------------------
# Tooling metadata (not used by Cargo directly). This documents external dev
# tools expected by contributors. Binary tools should be installed with
# `cargo install --locked <crate>` and are intentionally not regular
# dependencies to avoid bloating build graphs.
# ---------------------------------------------------------------------------
[package.metadata.dev-tools]
watchexec = { crate = "watchexec-cli", install = "cargo install --locked watchexec-cli", usage = "make run-watch" }
