[package]
name = "card_theme_macros"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/samgozman/github-statcrab"
repository = "https://github.com/samgozman/github-statcrab"
authors = ["Sam Gozman <sam@gozman.space>"]
description = "Procedural macros for GitHub StatCrab card themes"
license = "MIT"
readme = "README.md"
rust-version = "1.88.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
